--- a/CQP/CQP.vcxproj.filters
+++ b/CQP/CQP.vcxproj.filters
@@ -2,6 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="CQPExport.cpp" />
+    <ClCompile Include="CQP.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CQP.h" />
